@@ -1,9 +1,9 @@
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
-AC_REVISION($Id: configure.in,v 5.81 2012-08-15 22:25:31 andreas_kupries Exp $)
+AC_REVISION($Id: configure.in,v 5.82 2013-11-04 19:03:00 andreas_kupries Exp $)
 
-AC_INIT([expect],[5.45.1])
+AC_INIT([expect],[5.45.2])
 
 TEA_INIT([3.9])
 
